# lz-agent-skills

./: .gitignore  AGENTS.md  Justfile  pyproject.toml
.agents/: project.md
docs/plans/: adr-0001-initial-skill-layout-2026-05-22.md  adr-0002-centralized-path-config-2026-06-03.md  adr-0003-pydantic-config-tree-2026-06-03.md  adr-0004-loguru-first-logging-2026-06-03.md  adr-0005-agent-spec-convention-2026-06-03.md  adr-0006-tdd-checkbox-plans-2026-06-03.md  index.md  rfc-0001-initial-skill-layout-2026-05-22.md
docs/rfc/: index.md  rfc-0001-centralized-path-config-2026-06-03.md  rfc-0002-pydantic-config-tree-2026-06-03.md  rfc-0003-loguru-first-logging-2026-06-03.md  rfc-0004-agent-spec-and-tool-hook-2026-06-03.md  rfc-0005-tdd-checkbox-plans-2026-06-03.md  rfc-0006-skill-implementation-deltas-2026-06-03.md
scripts/: validate_skills.py
skills/adr-driven-development/: SKILL.md
skills/agent-spec-convention/: SKILL.md
skills/centralized-path-config/: SKILL.md
skills/codegraph-usage/: SKILL.md
skills/context7-docs-first/: SKILL.md
skills/decision-grilling/: SKILL.md
skills/development-best-practices/: SKILL.md
skills/finishing-a-development-branch/: SKILL.md
skills/git-workflow-and-versioning/: SKILL.md
skills/justfile-workflow/: SKILL.md
skills/loguru-first-logging/: SKILL.md
skills/pydantic-config-tree/: SKILL.md
skills/rfc-driven-development/: SKILL.md
skills/tdd-checkbox-plans/: SKILL.md
skills/typed-interfaces/: SKILL.md
skills/using-git-worktrees/: SKILL.md
skills/uv-python-workflow/: SKILL.md
skills/write-rfc/: SKILL.md
(+38 files in other folders)
