[project]
name = "skills-repo"
version = "0.1.0"
description = "Managed repository for reusable Codex skills"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0.2",
]

[dependency-groups]
dev = [
    "ruff>=0.11.0",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

